--- a/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
+++ b/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
@@ -96,10 +96,10 @@
             </objects>
             <point key="canvasLocation" x="653" y="1935"/>
         </scene>
-        <!--View Controller - Camera-->
+        <!--Camera View Controller - Camera-->
         <scene sceneID="bip-ul-DJt">
             <objects>
-                <viewController id="au5-ON-E1O" sceneMemberID="viewController">
+                <viewController id="au5-ON-E1O" customClass="CameraViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="GQs-eZ-9kz"/>
                         <viewControllerLayoutGuide type="bottom" id="JMF-Ak-R3d"/>
@@ -107,11 +107,60 @@
                     <view key="view" contentMode="scaleToFill" id="WJV-d8-h36">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="INT-XF-oAG" customClass="CamPreviewView">
+                                <rect key="frame" x="0.0" y="87" width="320" height="320"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mN3-mH-BXQ">
+                                <rect key="frame" x="135" y="447" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="integrated_webcam-100.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="photoSnapped:" destination="au5-ON-E1O" eventType="touchUpInside" id="5Vb-oZ-Trj"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Ww-Lt-CFZ">
+                                <rect key="frame" x="20" y="447" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="stack_of_photos-100.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="albumTapped:" destination="au5-ON-E1O" eventType="touchUpInside" id="b7H-pi-qI5"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GcA-tj-q1G">
+                                <rect key="frame" x="250" y="447" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="flash_light-100.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="flashToggle:" destination="au5-ON-E1O" eventType="touchUpInside" id="b5G-dD-rqu"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Camera" image="integrated_webcam-32.png" id="cTV-QM-q6B"/>
+                    <connections>
+                        <outlet property="albumButton" destination="5Ww-Lt-CFZ" id="vbs-w8-hCc"/>
+                        <outlet property="flashButton" destination="GcA-tj-q1G" id="J8w-Y6-wxe"/>
+                        <outlet property="previewView" destination="INT-XF-oAG" id="nk8-qH-XVo"/>
+                        <outlet property="shutterButton" destination="mN3-mH-BXQ" id="0Ds-Ng-NYG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VFE-5f-VgK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="kw0-WE-ShZ">
+                    <connections>
+                        <action selector="focusAndExposeTap:" destination="au5-ON-E1O" id="8hU-FM-J5j"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="653" y="1249"/>
         </scene>
@@ -183,9 +232,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="flash_light-100.png" width="100" height="100"/>
         <image name="home-32.png" width="32" height="32"/>
+        <image name="integrated_webcam-100.png" width="100" height="100"/>
         <image name="integrated_webcam-32.png" width="32" height="32"/>
         <image name="search-32.png" width="32" height="32"/>
+        <image name="stack_of_photos-100.png" width="100" height="100"/>
         <image name="star-32.png" width="32" height="32"/>
         <image name="user_male4-32.png" width="32" height="32"/>
     </resources>
