--- a/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
+++ b/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
@@ -143,9 +143,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zJ0-zx-SLS">
-                                <rect key="frame" x="0.0" y="88" width="320" height="320"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zJ0-zx-SLS">
+                                <rect key="frame" x="0.0" y="64" width="320" height="320"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.79607850309999995" green="0.32549020649999999" blue="0.33725491169999999" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="320" id="kOE-wW-XeB"/>
+                                </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mN3-mH-BXQ">
                                 <rect key="frame" x="135" y="447" width="50" height="50"/>
@@ -179,6 +183,11 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="zJ0-zx-SLS" firstAttribute="leading" secondItem="WJV-d8-h36" secondAttribute="leading" id="dwt-RG-Hzy"/>
+                            <constraint firstAttribute="trailing" secondItem="zJ0-zx-SLS" secondAttribute="trailing" id="dyJ-bC-BzQ"/>
+                            <constraint firstItem="zJ0-zx-SLS" firstAttribute="top" secondItem="GQs-eZ-9kz" secondAttribute="bottom" id="iff-EY-9Fs"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="BY8-5G-u6c"/>
                     <connections>
